Range sliders now show up on IE and Edge. References issue #61

--- a/openrem/remapp/static/css/openrem-extra.css
+++ b/openrem/remapp/static/css/openrem-extra.css
@@ -175,6 +175,14 @@ input.skinMapControls {
 input.skinMapControlSlider {
 }
 
+td.rangeCell {
+  width: 150px;
+}
+
+tr {
+  height: auto;
+}
+
 th.centred  {
   text-align: center;
   vertical-align: middle;
